Fix unwanted white space on home

--- a/src/components/Print/print.module.css
+++ b/src/components/Print/print.module.css
@@ -1,6 +1,6 @@
 .card {
   grid-area: "print";
-  min-width: 25rem;
+  min-width: fit-content;
   padding: 0;
   margin: 0;
   display: flex;
